[package]
name = "lrcphile"
version = "0.1.0"
edition = "2024"

[dependencies]
lofty = "0.19"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
urlencoding = "2.1"
colored = "2.0"
directories = "6.0.0"
